--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,65 @@
+/* Main container div */
+.container {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.card {
+    background-color: #8e8e8e;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 500px;
+    width: 100%;
+    text-align: center;
+}
+
+.button, input::file-selector-button:hover, input[type="submit"], input::file-selector-button {
+    background-color: #535353;
+    color: white;
+    border: 2px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+    transition: background-color 0.3s ease;
+}
+
+.button:hover, input::file-selector-button:hover, input[type="submit"]:hover, .file-selector-button{
+    background-color: #0056b3;
+}
+
+
+/* Images */
+.Images {
+    display: flex;
+    justify-content: center;
+}
+
+.uploaded_image_left,
+.uploaded_image_right {
+    margin: 0 10px;
+    border-radius: 8px;
+    overflow: hidden; /* Ensure the border-radius is applied correctly */
+}
+
+.uploaded_image_left img,
+.uploaded_image_right img {
+    max-width: 100%;
+    height: auto;
+}
+
+/* Dark mode settings */
 .dark-mode {
     background-color: #333;
+    color: #e6dddd;
+}
+
+.dark-mode h1 {
     color: #f4f4f4;
 }
-.dark-mode h1 {
-color: #f4f4f4;
-}
+
 .dark-mode h2 {
-color: #f4f4f4;
+    color: #f4f4f4;
 }
