--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
     <div class="container_3">
       <h2>We think you are doing:</h2>
       <h1>THIS EXERCISE</h1>
-      <img src="static/img.jpg" type="VIDEO" style=>
+      <iframe src="https://www.youtube.com/embed/IODxDxX7oi4" allowfullscreen="" frameborder="0" id="video"> </iframe>
     </div>
 
 
@@ -82,6 +82,8 @@
     });
   };
 
+
+
   inputImg.onchange = function () {
     let img = inputImg.files[0];
     placeHolder.src = URL.createObjectURL(img);
@@ -106,6 +108,7 @@
           }
         }).then(data => {
           updateImgs(data);
+          updateVid(data)
         }).catch(error => {
           console.error('Error:', error);
         });
