--- a/static/style.css
+++ b/static/style.css
@@ -144,3 +144,9 @@ input {
     border-radius: 50px;
     align-self: center;
 }
+
+iframe {
+    height: 800px;
+    width: 800px;
+    border-radius: 50px;
+}
