minor fix to web app output, and added loading cursor

--- a/static/style.css
+++ b/static/style.css
@@ -154,3 +154,8 @@ iframe {
     width: 400px;
     border-radius: 50px;
 }
+body.no-cursor-change {
+    cursor: wait !important; /* Override cursor style for body */
+}
+
+
