--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,10 @@
         <h1>What exercise am I doing?</h1>
         <p>Version 1.0.0</p>
         <p style="margin-top: 20px;"><b>Upload image:</b></p>
+        <p style="margin-top: 0px; font-size: 10px;"><b>(JPEG, JPG, PNG)</b></p>
         <img src='static/image.jpg' onclick="document.getElementById('input').click();" id="placeholder">
         <form action="/start_algo" method="GET">
-          <input type="file" accept="image/jpg image/jpeg" id="input">
+          <input type="file" accept="image/jpg image/jpeg image/png" id="input">
           <div id="loading-message"></div>
         </form>
         <button id="search"><b>START SEARCH</b></button>
@@ -106,12 +107,14 @@
   }
 
   search_button.onclick = function () {     // Main function Algorithm starts. 
+    document.body.classList.add('no-cursor-change');
     let img = inputImg.files[0];
     let form = new FormData();
     form.append("uploaded_img", img, img.name); // Append the input img
 
     pageScroll()
 
+    document.body.classList.add('no-cursor-change');
     fetch('/save_image', {  // fetch app route /save_image
       method: 'POST',
       body: form            
@@ -131,6 +134,7 @@
           updateTag(data)           // Update the site with new information
           updateVid(data)
           updateImgs(data);
+          document.body.classList.remove('no-cursor-change');
         }).catch(error => {
           console.error('Error:', error);
         });
@@ -139,7 +143,7 @@
       }
     }).catch(error => {
       console.error('Error:', error);
-    });
+    })
   };
 </script>
 </html>
